--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node-localstorage": "^2.2.1",
     "nodemon": "^2.0.12",
     "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "validator": "^13.6.0"
   }
 }
